*** empty log message ***

--- a/CHANGES
+++ b/CHANGES
@@ -112,6 +112,7 @@ Todo list:
     + Support for APEv2
     + Support for Lyrics3 v2.0 (?)
   - Options for forcing re-packing id3v2 ("-s size")
+  - Joined data ("-j filename")
   - Extend substitution capabilities (slices?)
   - Options for re-using existing tag values
   - Internationalization (Unicode)
