--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@ Changelog for 'id3'.
   main.cpp:178: made options case sensitive
 
 2004-029 (W05):
-  created a unix manpage
+  created a unix manpage. (whew.)
 
 2004-027 (W05):                                ---------[v0.72]-----------
   [CLI] Now supports directory wildcards (e.g. "mp3root/*/*/*_*.mp3")
@@ -111,14 +111,18 @@ Todo list:
     + Support for Ogg Vorbis
     + Support for APEv2
     + Support for Lyrics3 v2.0 (?)
-  - Options for forcing re-packing id3v2 ("-s size")
-  - Joined data ("-j filename")
-  - Extend substitution capabilities (slices?)
-  - Options for re-using existing tag values
+    + File rename
   - Internationalization (Unicode)
-  ? Shorthand Wildcards ("%n. %t.mp3" == -n %1 -t %2 "*. *.mp3")
-  ? Join main.cpp & view.cpp
+    + Locale interaction
+    + Enable multibyte encodings for varexp
+  - Options for forcing re-packing id3v2 ("-s size")
+  - Tag handling(/removal) for ID3v2 prior 3
+  - Fetch default data ("-j filename")
+  - Extend substitution capabilities (slices? i/o? script?)
+  - Shorthand Wildcards ("%n. %t.mp3" == -n %1 -t %2 "*. *.mp3")
+  - Options for re-using existing tag values
+  ? Malformed ID3v2 tags
+  ? Make varexp use fnmatch on UNIX
 
 Thanks go out to everybody who has responded with questions, suggestions,
 and bug reports!
-
