--- a/README
+++ b/README
@@ -213,7 +213,7 @@ _>|_||_)_> |_| |_|_||_|(_)| |
  _.  _|_|_  _ .__
 (_||_||_| |(_)|_>
 ~~~~~~~~~~~~~~~~~
-       squell ^ zf! (squell@goth.net, squell@xms.ms)
+       squell ^ zf! (squell@goth.net, squell@alumina.nl)
 
  _. __|_ _|
 (_|(_)|_(_|
