*** empty log message ***

--- a/CHANGES
+++ b/CHANGES
@@ -135,7 +135,7 @@ Todo list:
 
   - autocounter
   - "-rT???"
-  - show new filenames inverbose
+  - local filenames?
 
   - More things:
     + Support for Ogg Vorbis
