--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,12 @@
 Changelog for 'id3'.
 
+2004-186 (W27):
+  debian/*: automation of building .deb packages via dpkg-buildpackage -b
+  makefile: added 'fetch-orig' (get latest source tarball with wget).
+
+2004-183 (W27):
+  sedit.cpp: edit() overhauled + support for %a .. %z added
+
 2004-176 (W26):                                ---------[v0.74]-----------
   main.cpp: [BUGFIX] ARGH! Since 0.72, id3 crashed on invalid %indexes. I
     had carefully placed range checks in the original varexp, but due to
