--- a/INSTALL
+++ b/INSTALL
@@ -52,7 +52,7 @@ which should be included in this source distribution.
 Successfully compiled with:
 
  - GCC 3.x          (GNU/Linux, FreeBSD, Solaris, DJGPP, MinGW)
- - GCC 2.95.x       (GNU/Linux, DJGPP, MinGW)
+ - GCC 2.95.x       (GNU/Linux, FreeBSD, DJGPP, MinGW)
  - Intel C++ 7.1    (GNU/Linux)
  - Borland C++ 5.5  (Win32)
 
